@@ -1,3 +1,4 @@
 * Status-bar icon fix. It is not a setting.
+* Swipe from Backspace will delete a whole word for'ya.
 
 More here: https://github.com/AnySoftKeyboard/AnySoftKeyboard/milestones/1.7-r6
